<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center">
    <Button
        android:onClick="jump"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="跳转"/>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.zly.collectapp.view.InputView
            android:id="@+id/et_name"
            android:layout_width="300dp"
            android:drawableLeft="@drawable/icon_user"
            android:drawableRight="@drawable/icon_clear"
            android:layout_height="wrap_content"
            android:background="@drawable/login_background"
            android:hint="@string/login_name_hint"
            />
        <com.zly.collectapp.view.InputView
            android:id="@+id/et_password"
            android:layout_width="300dp"
            android:drawableLeft="@drawable/icon_password"
            android:drawableRight="@drawable/icon_clear"
            android:layout_height="wrap_content"
            android:background="@drawable/login_background"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:hint="@string/login_pwd_hint"
            />
        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_remember_me"
            android:layout_marginTop="10dp"
            android:layout_gravity="start"/>
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/login_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radius"
            android:textColor="@android:color/white"
            android:text="@string/login_btn_text"
            />
        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/login_register_tip"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forget_tip"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/holo_blue_dark"
                />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>