<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:gravity="center">
    <com.zly.collectapp.view.InputView
        android:id="@+id/et_register_name"
        android:hint="@string/login_name_hint"
        android:layout_width="300dp"
        android:drawableLeft="@drawable/icon_user"
        android:drawableRight="@drawable/icon_clear"
        android:layout_height="wrap_content"
        android:background="@drawable/login_background"
        android:layout_marginBottom="15dp"/>
    <com.zly.collectapp.view.InputView
        android:id="@+id/et_register_pwd"
        android:layout_width="300dp"
        android:drawableLeft="@drawable/icon_password"
        android:drawableRight="@drawable/icon_clear"
        android:inputType="textPassword"
        android:hint="@string/login_pwd_hint"
        android:background="@drawable/login_background"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"/>
    <com.zly.collectapp.view.InputView
        android:id="@+id/et_register_confirm"
        android:layout_width="300dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/icon_password"
        android:drawableRight="@drawable/icon_clear"
        android:background="@drawable/login_background"
        android:hint="@string/register_pwd_confirm"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"/>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/radius"
        android:text="@string/register_btn"/>
</LinearLayout>